<resources>
    <!-- Strings related to Fullscreen Activity -->
    <string name="app_name">TeamEscapeFBCounter</string>
    <string name="dummy_button">open settings</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="summary_title">Set image from storage</string>
    <string name="summary_load_from_gallery">Load image from gallery</string>
    <string name="summary_size_ratio">Size ratio in % from width  (0.00 - 1.00)</string>
    <string name="summary_margin">Margin in % from width (0.00 - 1.00)</string>


    <!-- Background settings -->
    <string name="pref_header_background">Background image</string>
    <string name="pref_title_background_image_sd">Load background image</string>
    <string name="pref_title_background_image_name">Background image title</string>
    <string name="background_default_value">background_init</string>

    <!-- Logo settings -->
    <string name="pref_header_logo">Logo image</string>
    <string name="pref_logo_image_load">Load logo image</string>
    <string name="pref_logo_image_name">Logo image title</string>
    <string name="pref_logo_image_sizeratio">Logo image size</string>
    <string name="pref_logo_image_leftmargin">Left margin</string>
    <string name="pref_logo_image_topmargin">Top margin</string>

    <!-- Facebook settings -->
    <string name="pref_header_facebook">Facebook settings </string>
    <string name="pref_facebook_image_load">Load Facebook image</string>
    <string name="pref_facebook_image_title">Facebook image title</string>
    <string name="pref_facebook_image_sizeratio">Facebook image size</string>
    <string name="pref_facebook_image_left_margin">Left margin</string>
    <string name="pref_facebook_image_top_margin">Top margin</string>
    <string name="pref_facebook_fixed_allocation_counter_fb">Fixed allocation between counter and FB thumb</string>
    <string name="pref_facebook_fql_call_url">Facebook FQL call URL</string>
    <string name="pref_facebook_last_known_count">Last known Facebook likes</string>

    <!-- Counter settings -->
    <string name="pref_header_counter">Counter settings </string>
    <string name="pref_counter_text_size">Counter font size</string>
    <string name="pref_counter_text_left_margin">Counter left margin</string>
    <string name="pref_counter_text_top_margin">Counter top margin</string>

    <!-- Text settings -->
    <string name="pref_header_text">Text settings</string>
    <string name="pref_text_buttom_content">Content buttom text</string>
    <string name="pref_text_center_left_margin">Text center left margin</string>
    <string name="pref_text_center_top_margin">Text center top margin</string>
    <string name="pref_text_center_font_size">Text center font size</string>
    <string name="pref_text_center_content">Content center text</string>
    <string name="pref_text_buttom_left_margin">Text buttom left margin</string>
    <string name="pref_text_buttom_top_margin">Text buttom top margin</string>
    <string name="pref_text_buttom_font_size">Text buttom font size</string>
    <string name="pref_text_hyperlink_plain_switch">Set buttom text as hyperlink</string>

    <!-- QR settings -->
    <string name="pref_header_qr">QR-Code settings</string>
    <string name="pref_qrcode_image_load">Load QR-Code image</string>
    <string name="pref_qrcode_image_title">QR-Code image title</string>
    <string name="pref_qrcode_image_sizeratio">QR-Code image size</string>
    <string name="pref_qrcode_image_left_margin">Left margin</string>
    <string name="pref_qrcode_image_top_margin">Top margin</string>

    <!-- Log settings -->
    <string name="pref_header_log">Superuser settings (Hidden in v.1.0)</string>
    <string name="title_activity_log">System Log</string>
    <string name="pref_log_load">Log Activity</string>
    <string name="title_activity_settings_activity_test">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="exit_button">Exit</string>


</resources>
