<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$BackgroundImagePreferenceFragment"
        android:title="@string/pref_header_background" android:icon="@drawable/ic_background_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$LogoImagePreferenceFragment"
        android:title="@string/pref_header_logo"
        android:icon="@drawable/ic_logo_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$FacebookPreferenceFragment"
        android:title="@string/pref_header_facebook" android:icon="@drawable/ic_facebook_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$CounterPreferenceFragment"
        android:title="@string/pref_header_counter" android:icon="@drawable/ic_log_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$TextPreferenceFragment"
        android:title="@string/pref_header_text"
        android:icon="@drawable/ic_text_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$QRPreferenceFragment"
        android:title="@string/pref_header_qr" android:icon="@drawable/ic_qr_black_24dp" />

    <header
        android:fragment="de.teamescape.dev.teamescapefbcounter.SettingsActivity$LogPreferenceFragment"
        android:title="@string/pref_header_log" android:icon="@drawable/ic_info_black_24dp" />



</preference-headers>
