<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="QR CODE BASIC SETTINGS">
        <EditTextPreference
            android:key="QRCODEIMAGETITLE"
            android:title="@string/pref_qrcode_image_title"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_title"/>

        <Preference
            android:title="@string/pref_qrcode_image_load"
            android:key="QRCODEIMAGEURI"
            android:summary="@string/summary_load_from_gallery">
            <intent android:action="android.settings.BG_File_Manager" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="QR CODE EXPERT SETTINGS">
        <EditTextPreference
            android:key="QRCODEIMAGESIZERATIO"
            android:title="@string/pref_qrcode_image_sizeratio"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_size_ratio"/>

        <EditTextPreference
            android:key="QRCODEIMAGELEFTMARGIN"
            android:title="@string/pref_qrcode_image_left_margin"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_margin"/>

        <EditTextPreference
            android:key="QRCODEIMAGETOPMARGIN"
            android:title="@string/pref_qrcode_image_top_margin"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_margin"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="DEFAULT SETTINGS">
        <Preference
            android:key="restore_qrcode_image"
            android:title="Reset QR-Code image to default" />
    </PreferenceCategory>

</PreferenceScreen>