<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="FACEBOOK BASIC SETTINGS">
       <!-- <EditTextPreference
            android:key="FACEBOOKIMAGETITLE"
            android:title="@string/pref_facebook_image_title"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_title"/>
        -->

        <ListPreference
            android:key="FACEBOOKIMAGETITLELIST"
            android:title="List of stored images"
            android:dialogTitle="Choose Facebook image"
            android:summary="Select the Facebook image"
            />

        <Preference
            android:title="@string/pref_facebook_image_load"
            android:key="FACEBOOKIMAGEURI"
            android:summary="@string/summary_load_from_gallery">
            <intent android:action="android.settings.BG_File_Manager" />
        </Preference>

        <EditTextPreference
            android:key="LASTKNOWNFACEBOOKCOUNT"
            android:title="@string/pref_facebook_last_known_count"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:editable="false"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
    </PreferenceCategory>

    <PreferenceCategory android:title="FACEBOOK EXPERT SETTINGS">
        <SwitchPreference
            android:key="FIXEDALLOCATIONCOUNTERFB"
            android:title="@string/pref_facebook_fixed_allocation_counter_fb"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="FACEBOOKIMAGESIZERATIO"
            android:title="@string/pref_facebook_image_sizeratio"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_size_ratio"/>

        <EditTextPreference
            android:key="FACEBOOKIMAGELEFTMARGIN"
            android:title="@string/pref_facebook_image_left_margin"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_margin"/>

        <EditTextPreference
            android:key="FACEBOOKIMAGETOPMARGIN"
            android:title="@string/pref_facebook_image_top_margin"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="@string/summary_margin"/>

        <EditTextPreference
            android:key="FACEBOOKFQLCALLURL"
            android:title="@string/pref_facebook_fql_call_url"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:summary="HTTPS Query for Facebook page"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="DEFAULT SETTINGS">
        <Preference
            android:key="restore_facebook_image"
            android:title="Reset Facebook image to default" />
    </PreferenceCategory>

</PreferenceScreen>